cmake_minimum_required(VERSION 2.8.7)
project(cpp_server)

#SET(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -g -Wall")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O1 -g -Wall -fsanitize=address -fno-omit-frame-pointer")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -Wall -fno-builtin-malloc -fno-builtin-calloc -fno-builtin-realloc -fno-builtin-free")
#set(CMAKE_EXE_LINKER_FLAGS " -lpthread -lprotobuf -L./lib")

set(MAIN_TEST main.cpp)
set(SOURCE_FILES cfg.cpp conn.cpp connmgr.cpp log.cpp main.cpp net.cpp qps.cpp recvBuff.cpp rpchandle.cpp tcpclient.cpp ./kcpsess/ikcp.c ./kcpsess/sessServer.cpp ./core/room.cpp ./core/player.cpp ./core/pb/login.pb.cc ./core/pb/server.pb.cc)
add_executable(cpp_server ${SOURCE_FILES} ${MAIN_TEST})
target_link_libraries(cpp_server pthread)
#target_link_libraries(cpp_server "libtcmalloc.a")
#target_link_libraries(cpp_server "libtcmalloc_debug.a")
target_link_libraries(cpp_server "libprotobuf.a")
